Box selection in uv editor does not work as expected with edge mode #99443

Closed
opened 2022-07-04 21:28:11 +02:00 by Daniel Gryningstjerna · 7 comments

System Information
Operating system: Windows-10-10.0.16299-SP0 64 Bits
Graphics card: NVIDIA GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: never worked

Short description of error
UV editor
Screenshot_6.png
current
Screenshot_7.png
excpected
Screenshot_8.png

Edit mode
Screenshot_11.png
Screenshot_12.png
Exact steps for others to reproduce the error
add plane and subdivde it two times,
go into uv workspace and drag select with box select tool over the same edges as in the screenshot,
do the same thing in edit mode and notice the difference.

Video:
Blender 2022-07-04 21_14_51.mp4

.blend file:
Box selection in uv editor bug.blend

**System Information** Operating system: Windows-10-10.0.16299-SP0 64 Bits Graphics card: NVIDIA GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: never worked **Short description of error** UV editor ![Screenshot_6.png](https://archive.blender.org/developer/F13258766/Screenshot_6.png) current ![Screenshot_7.png](https://archive.blender.org/developer/F13258769/Screenshot_7.png) excpected ![Screenshot_8.png](https://archive.blender.org/developer/F13258772/Screenshot_8.png) Edit mode ![Screenshot_11.png](https://archive.blender.org/developer/F13258783/Screenshot_11.png) ![Screenshot_12.png](https://archive.blender.org/developer/F13258785/Screenshot_12.png) **Exact steps for others to reproduce the error** add plane and subdivde it two times, go into uv workspace and drag select with box select tool over the same edges as in the screenshot, do the same thing in edit mode and notice the difference. Video: [Blender 2022-07-04 21_14_51.mp4](https://archive.blender.org/developer/F13258755/Blender_2022-07-04_21_14_51.mp4) .blend file: [Box selection in uv editor bug.blend](https://archive.blender.org/developer/F13258748/Box_selection_in_uv_editor_bug.blend)

Added subscriber: @Dangry

Added subscriber: @Dangry
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @sidd017

Added subscriber: @sidd017
Siddhartha Jejurkar self-assigned this 2022-07-05 08:32:25 +02:00

Note that lasso select also works the same way as box select in the UV editor.
Both operators allow edge selections only when the entire edge (both vertices) lies within the selection area (box/lasso).

Note that lasso select also works the same way as box select in the UV editor. Both operators allow edge selections only when the entire edge (both vertices) lies within the selection area (box/lasso).

This issue was referenced by 52b7f2b089

This issue was referenced by 52b7f2b089071a6d2281e369ab820c9406e06c4e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99443
No description provided.